# Flask_Skeleton

./: .gitignore  Dockerfile  config.py  docker-compose.yml  pyproject.toml  wsgi.py
app/: __init__.py  logger.py
app/forms/: __init__.py
app/forms/auth/: __init__.py  login_form.py  register_form.py
app/models/: user.py  utils.py
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/views/: __init__.py  auth.py
migrations_sqlite/versions/: 653e68fb8df9_initial_migration.py
tests/: test_auth.py  utils.py
