[tool.poetry]
name = "flask.app"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.11b1"
flake8 = "^4.0.1"
python-dotenv= "^0.19.2"
psycopg2-binary= "^2.9.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-Login = "^0.5.0"
Flask = "^2.1.1"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
